fix so scrollbar gets removed in ontoskin3
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@5045 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/QueryInterface/qi.css
+++ b/extensions/SMWHalo/skins/QueryInterface/qi.css
@@ -5,7 +5,7 @@ font-size-adjust:none;
 font-style:normal;
 font-variant:normal;
 max-width:100%;
-width:100%;
+width: 99%;
 height:550px;
 }
 
